# dfc-node

./: .gitignore  Cargo.toml  README.md  config.example.toml  config.toml.example
src/: assignments.rs  config.rs  heartbeat.rs  main.rs  shutdown.rs  types.rs
src/api/: client.rs
src/auth/: mod.rs  token.rs  wallet.rs
src/docker/: manager.rs
